--- a/Meow Space/notes/changeLog.txt
+++ b/Meow Space/notes/changeLog.txt
@@ -3,6 +3,7 @@
 =Исправлено
 *Модифицировано
 v.0.0.7 26.11.19
+*Получение предметов при ломании блоков
 v.0.0.6 25.11.19
 +Более высокое FPS
 +Ставить блоки
